Version 1.40
  * Add Bio::DB::Bam::Alinment->qstring() convenience method.
  * Add reference to GitHub site for this module.
  
Version 1.39 

   * Bio::DB::Bam::Alinment->strand() performance
     patch from: https://rt.cpan.org/Ticket/Display.html?id=88203.

Version 1.38
   * Add -lpthread to linker flags to allow to run with samtools 0.1.19.

Version 1.37
   * Fix incorrect calculation of mate_len and mate_end when CIGAR string
     contains insertions and deletions. Thanks to Ian Sealy for the patch!

Version 1.36
   * Added C binary bam2bedgraph for quick coverage calculations (2-5x faster
     than BEDTools' genomeCoverageBed)
   * Speed up bamToGrowse.pl using bam2bedgraph.

Version 1.35
   * Add patch from John Marshall to fix several problems in the tam line generator
     when reads are unmapped.

Version 1.34
   * Add patch from Florian Finkernagel to accomodate paired end data that are
     encoded as CIGAR strings.

Version 1.33
   * Fix compile error on perl 5.8.7 and lower.
   * Fix "substr outside of string" errors when processing split alignments with a hard clip
   at beginning of CIGAR string.

Version 1.32
   * Fix loss of strand information when joining split alignments.
   * Give read_pair objects a primary_id that will allow them to be retrieved intact using get_feature_by_id().

Version 1.31
   * Added Bio::DB::Sam->max_pileup_cnt() and Bio::DB::Bam->max_pileup_cnt() method
     to allow users to adjust Samtools cap on pileup depth.

Version 1.30
   * Apply patch from Jason Walker to return full arrays across 0-depth coverage
     and to max the count at a certain coverage.

Version 1.29
   * Apply patch from Hongwen Qiu to fix memory allocation error in 
   bam header generation.

Version 1.28
   *Fixed coverage calculations so that sections of reads that cover 
    the reference genome which are marked in the CIGAR string as
    'N' (skip) or 'D' (delete) do not contribute to coverage.